--- a/dragmerecomendation.ipynb
+++ b/dragmerecomendation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCD0+2kwtGJzp97BkQ7/ys",
+      "authorship_tag": "ABX9TyMLucwkSrX9oDbKcX7z/UeK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1278,7 +1278,7 @@
         "for i in range(tfidf_matrix.shape[0]):\n",
         "    ann_index.add_item(i, tfidf_matrix[i].toarray()[0])\n",
         "\n",
-        "ann_index.build(10)  # Build ANN index with 10 trees\n",
+        "ann_index.build(10)\n",
         "ann_index.save('event_index.ann')"
       ],
       "metadata": {
@@ -1311,7 +1311,7 @@
         "    \"\"\"\n",
         "    try:\n",
         "        idx = df[df['id'] == event_id].index[0]\n",
-        "        similar_items = ann_index.get_nns_by_item(idx, top_n + 1)[1:]  # Exclude the event itself\n",
+        "        similar_items = ann_index.get_nns_by_item(idx, top_n + 1)[1:]\n",
         "        return df.iloc[similar_items].to_dict('records')\n",
         "    except IndexError:\n",
         "        return {\"error\": \"Event ID not found in the dataset.\"}"
